docs/api/qiskit/0.19/qiskit.transpiler.passes.DAGFixedPoint.mdx
---
title: DAGFixedPoint (v0.19)
description: API reference for qiskit.transpiler.passes.DAGFixedPoint in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.DAGFixedPoint
---

# DAGFixedPoint

<Class id="qiskit.transpiler.passes.DAGFixedPoint" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/utils/dag_fixed_point.py" signature="DAGFixedPoint(*args, **kwargs)" modifiers="class">
  Check if the DAG has reached a fixed point.

  A dummy analysis pass that checks if the DAG a fixed point (the DAG is not modified anymore). The results is saved in `property_set['dag_fixed_point']` as a boolean.

  ## Attributes

  <span id="dagfixedpoint-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.DAGFixedPoint.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="dagfixedpoint-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.DAGFixedPoint.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="dagfixedpoint-name" />

  ### name

  <Function id="qiskit.transpiler.passes.DAGFixedPoint.name" signature="DAGFixedPoint.name()">
    Return the name of the pass.
  </Function>

  <span id="dagfixedpoint-run" />

  ### run

  <Function id="qiskit.transpiler.passes.DAGFixedPoint.run" signature="DAGFixedPoint.run(dag)">
    Run the DAGFixedPoint pass on dag.
  </Function>
</Class>

